--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <commonmark.version>0.11.0</commonmark.version>
         <rome.version>1.0</rome.version>
         <emoji.version>4.0.0</emoji.version>
+        <commons-codec.version>1.12</commons-codec.version>
     </properties>
 
     <dependencies>
@@ -71,6 +72,13 @@
             <groupId>com.vdurmont</groupId>
             <artifactId>emoji-java</artifactId>
             <version>${emoji.version}</version>
+        </dependency>
+
+        <!-- base64解码 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec.version}</version>
         </dependency>
 
         <!-- lombok -->
